# ElementFinder

./: .gitignore  README.md  plan.md  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt  setup.py
src/elementfinder/: __init__.py  main.py
src/elementfinder/cli/: __init__.py  parser.py
src/elementfinder/core/: __init__.py  cursor_handler.py  element_finder.py  window_finder.py
src/elementfinder/output/: __init__.py  formatters.py
src/elementfinder/utils/: __init__.py  exceptions.py  logging.py  validators.py
tests/: __init__.py  test_integration.py
tests/test_cli/: test_parser.py
tests/test_core/: test_cursor_handler.py  test_element_finder.py  test_window_finder.py
tests/test_output/: test_formatters.py
tests/test_utils/: test_exceptions.py  test_validators.py
